# libglob

./: CMakeLists.txt  glob.c  glob.h
.github/workflows/: ci.yml
